--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -8,4 +8,6 @@
     <string name="repositories">Repositories</string>
     <string name="followers">Followers</string>
     <string name="name">Name</string>
+    <string name="tab_text_1">Follower</string>
+    <string name="tab_text_2">Following</string>
 </resources>
