--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -13,4 +13,5 @@
     <string name="search_hint">Username</string>
     <string name="following">Following</string>
     <string name="error_message">Failed to Load Data</string>
+    <string name="not_found">Not Found</string>
 </resources>
